Revert "Feat/EV-6 dynamic dates (#323)"
This reverts commit 183d83c639219632854fa7fbaf025b85203fc6df.
